# gradgraph

./: README.md  pyproject.toml  readthedocs.yml  requirements.txt
.github/workflows/: draft-pdf.yml  publish.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
examples/: example_linear_growth_graph.ipynb
gradgraph/: __init__.py
gradgraph/graph/: __init__.py  features.py  hash.py  paths.py  persistence.py  utils.py
gradgraph/optimization/: __init__.py
gradgraph/optimization/tf/: __init__.py  callbacks.py  constraints.py  interp.py  layers.py  trainer.py  utils.py
paper/: paper.md
tests/: test_graph_features.py  test_graph_hash.py  test_graph_paths.py  test_graph_persistence.py  test_graph_utils.py
